--- a/css/index.css
+++ b/css/index.css
@@ -111,6 +111,7 @@ html,body{
     height: 400px;
     /* background-repeat: no-repeat; */
     background-size: cover;
+    position: relative;
 }
 .banner__circle{
     width: 300px;
@@ -119,6 +120,21 @@ html,body{
     color: white;
     border-radius: 50%;
     text-align: center;
-    
+    position: absolute;
+    top: 15px;
+    left: 300px;
     /* opacity: 0.8; */
 }
+.banner__circle p{
+    font-size: 20px;
+    margin: 0 0 20px;
+}
+.banner__circle p:first-child{
+    font-size: 30px;
+    margin: 50px 0 0;
+}
+.banner__circle p:nth-child(2){
+    font-size: 80px;
+    margin: 0;
+}
+
